<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:set="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/listview_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_subtitle_general" />

            <TextView
                style="@style/listview_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_subtitle_shoot_photo" />

            <com.dji.sdk.sample.common.ListViewItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                set:component_name="@string/component_camera"
                set:list_item_name="@string/camera_listview_shoot_single_photo"
                set:sub_Layout="@layout/content_main"
                set:view_name="@string/view_shoot_single_photo"></com.dji.sdk.sample.common.ListViewItem>

            <TextView
                style="@style/listview_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_subtitle_record_video" />

            <com.dji.sdk.sample.common.ListViewItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                set:component_name="@string/component_camera"
                set:list_item_name="@string/camera_listview_record_video"
                set:sub_Layout="@layout/content_main"
                set:view_name="@string/view_record_video"></com.dji.sdk.sample.common.ListViewItem>

        </LinearLayout>
    </ScrollView>

</LinearLayout>