<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:set="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/listview_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/component_listview_component" />

            <com.dji.sdk.sample.common.ListViewItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                set:list_item_name="@string/component_listview_camera"
                set:sub_Layout="@layout/content_camera">

            </com.dji.sdk.sample.common.ListViewItem>

            <com.dji.sdk.sample.common.ListViewItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                set:list_item_name="@string/component_listview_gimbal"
                set:sub_Layout="@layout/content_gimbal">

            </com.dji.sdk.sample.common.ListViewItem>

            <com.dji.sdk.sample.common.ListViewItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                set:list_item_name="@string/component_listview_battery"
                set:sub_Layout="@layout/content_battery">

            </com.dji.sdk.sample.common.ListViewItem>

            <com.dji.sdk.sample.common.ListViewItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                set:list_item_name="@string/component_listview_airlink"
                set:sub_Layout="@layout/content_airlink">

            </com.dji.sdk.sample.common.ListViewItem>

        </LinearLayout>
    </ScrollView>
</LinearLayout>